# fledge

./: .atlasignore  .gitignore  .trust.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  build.rs  flake.nix  fledge.toml  install.ps1  install.sh  spec-sync.toml
.cursor/commands/: specsync-create-spec.md
.fledge/: meta.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  post-release-formula.yml  release.yml  trust.yml
.specsync/: .gitignore  adoption-report.json  config.toml  hashes.json  registry.toml  sdd.json
Formula/: fledge.rb
docs/: book.toml
docs/src/: SUMMARY.md  agents.md  changelog.md  cli-reference.md  configuration.md  develop.md  doctor.md  fledge-toml.md  flows.md  getting-started.md  github-integration.md  introduction.md  lanes.md  pillars.md  plugins.md  reference.md  review.md  ship.md  spec.md  template-authoring.md  templates.md  troubleshooting.md  use-cases.md  wasm-plugins.md
examples/fledge-hello/: README.md  hello.sh  plugin.toml  test-noninteractive.sh
hooks/: install.sh  pre-commit
site/: .gitignore  README.md  astro.config.mjs  package.json  prettier.config.mjs  tsconfig.json
site/public/: robots.txt
site/scripts/: build-plugin-registry.test.ts  build-plugin-registry.ts  generate-doc-redirects.test.ts  generate-doc-redirects.ts  plugin-helpers.test.ts  plugin-helpers.ts  related-plugins.test.ts  related-plugins.ts  remark-resolve-doc-links.test.ts  remark-resolve-doc-links.ts  render-readme.test.ts  render-readme.ts
specs/: cli.md  templates.md
specs/ai/: ai.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/ask/: ask.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/changelog/: changelog.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/checks/: checks.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/config/: config.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/create_template/: context.md  create_template.spec.md  requirements.md  tasks.md  testing.md
specs/doctor/: context.md  doctor.spec.md  requirements.md  tasks.md  testing.md
specs/envelope/: context.md  envelope.spec.md  requirements.md  tasks.md  testing.md
specs/flows/: context.md  flows.spec.md  requirements.md  tasks.md  testing.md
specs/github/: context.md  github.spec.md  requirements.md  tasks.md  testing.md
specs/init/: context.md  init.spec.md  requirements.md  tasks.md  testing.md
specs/introspect/: context.md  introspect.spec.md  (+3 more)
src/: ai.rs  ask.rs  changelog.rs  checks.rs  cli.rs  config.rs  config_cmds.rs  create_template.rs  deps.rs  doctor.rs  envelope.rs  flows.rs  github.rs  init.rs  introspect.rs  issues.rs  lanes.rs  llm.rs  main.rs  meta.rs  metrics.rs  plugin.rs  prompts.rs  protocol.rs  prs.rs  publish.rs  release.rs  remote.rs  review.rs  run.rs  search.rs  spec.rs  spinner.rs  template_cmds.rs  templates.rs  test_support.rs  trust.rs  tui.rs  update.rs  utils.rs  (+4 more)
tests/: changelog.rs  config.rs  doctor.rs  fledge.test.ts  integration.rs  lanes.rs  main.rs  placeholder.test.ts  release.rs  run.rs  spec.rs  templates.rs  validate.rs
(+336 files in other folders)
