[package]
name = "fledge"
version = "0.3.0"
edition = "2024"
authors = ["CorvidLabs <corvidlabs@proton.me>"]
description = "Corvid-themed project scaffolding CLI — get your projects ready to fly."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/CorvidLabs/fledge"
repository = "https://github.com/CorvidLabs/fledge"
rust-version = "1.85"
keywords = ["cli", "scaffold", "template", "project-init"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
tera = "1"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
chrono = "0.4"
dirs = "6"
regex-lite = "0.1"
ureq = "3"
include_dir = "0.7"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
sha2 = "0.11.0"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm"]

[dev-dependencies]
tempfile = "3"
