[package]
name = "fledge"
version = "1.0.2"
edition = "2021"
authors = ["0xLeif <leif.algo@pm.me>"]
description = "Dev lifecycle CLI. One tool for the dev loop, any language."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/CorvidLabs/fledge"
documentation = "https://corvidlabs.github.io/fledge/"
repository = "https://github.com/CorvidLabs/fledge"
rust-version = "1.89"
keywords = ["cli", "scaffold", "template", "task-runner", "dev-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
tera = "1"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
chrono = "0.4"
dirs = "6"
regex-lite = "0.1"
ureq = "3"
include_dir = "0.7"
indicatif = "0.17"
sha2 = "0.11.0"
base64 = "0.22"
notify = "7"
shell-words = "1.1.1"
wasmtime = "43"
wasmtime-wasi = "43"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
tempfile = "3"

[target."cfg(unix)".dependencies]
libc = "0.2.185"
